# dckit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: 01_quickstart.py  02_qdrant_pipeline.py
src/dckit/: __init__.py  codebook.py  discovery.py  exceptions.py  mcp_server.py  oracle.py  selector.py  tagger.py
src/dckit/_internal/: json_extract.py  prompts.py
src/dckit/adapters/: __init__.py  embedder.py  llm.py  vector_db.py
src/dckit/cli/: mcp_launcher.py
tests/unit/: conftest.py  test_codebook.py  test_discovery_synth.py  test_json_extract.py  test_llm_adapter.py  test_oracle.py  test_selector.py  test_tagger.py
